--- a/style.css
+++ b/style.css
@@ -11,9 +11,23 @@ body {
     display: flex;
     flex-direction: column; /* Stacks title above buttons */
     align-items: center; /* Centers items horizontally */
-    padding: 20px;
+    padding: 10px;
   }
-
+.startbutton{
+    background-color:#3A2A7E;
+    border-width: 2px;
+    border-color: rgb(51, 0, 255);
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 20px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 50px;
+    width: 175px;
+    height: 80px;
+}
 .button{
     background-color:#3A2A7E;
     border-width: 2px;
@@ -33,18 +47,18 @@ body {
     display: flex;
     justify-content: center;
     gap: 10px;
-    margin-top: 20px;
+    margin-top: 0px;
   }
   .title-container {
     color: #3A2A7E ; /* White text */
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
     font-size: xx-large;
 }
 .timer {
-    margin-top: 10px;
-    margin-bottom: 45px;
+    margin-top: 0px;
+    margin-bottom: 0px;
     align-items: center;
     justify-content: center;
-    font-size: 100px;
+    font-size: 90px;
 }
